test/1.2/errors/T_EILLCOMP.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

// use dummy enclosing objects, because broken parameters currently inhibit
// creation of the parent object
port p1 {
    /// ERROR EILLCOMP
    parameter x = (5 > true);
}

port p2 {
    /// ERROR EILLCOMP
    parameter x = (true > false);
}

port p3 {
    /// ERROR EILLCOMP
    parameter x = ($y > "hej");
    parameter y = 5;
}

method init {
    local int *p = NULL;
    /// ERROR EILLCOMP
    1 > p;
    /// ERROR EILLCOMP
    5 > "hej";
    /// ERROR EILLCOMP
    5 > true;
    /// ERROR EILLCOMP
    true > false;
    /// ERROR EILLCOMP
    if (5 > "hej")
        throw;
    /// ERROR EILLCOMP
    if (5 > true)
        throw;
    /// ERROR EILLCOMP
    if (true > false)
        throw;
    /// ERROR EILLCOMP
    p == 0;
    /// ERROR EILLCOMP
    p == 1;
}
